style: line-clamp 표준 속성 추가로 CSS 호환성 개선

--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -208,6 +208,7 @@
   
   display: -webkit-box;
   -webkit-box-orient: vertical;
+  line-clamp: 3;
   -webkit-line-clamp: 3;
   overflow: hidden;
 }
@@ -240,6 +241,8 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
+
   overflow: hidden;
   text-overflow: ellipsis;
   
